--- a/components/SongItem/SongItem.module.scss
+++ b/components/SongItem/SongItem.module.scss
@@ -1,31 +1,85 @@
-.songItemWrapper {
-    position: relative;                          /* relative */
-    display: flex;                               /* flex */
-    flex-direction: column;                      /* flex-col */
-    align-items: center;                         /* items-center */
-    justify-content: center;                     /* justify-center */
-    border-radius: 0.375rem;                     /* rounded-md */
-    overflow: hidden;                            /* overflow-hidden */
-    column-gap: 1rem;                            /* gap-x-4 = 16px */
-    background-color: rgba(163, 163, 163, 0.05); /* bg-neutral-400/5 */
-    cursor: pointer;                             /* cursor-pointer */
-    padding: 0.75rem;                            /* p-3 = 12px */
-    transition: background-color 0.2s ease;      /* transition */
-    
-    &:hover {
-        background-color: rgba(163, 163, 163, 0.1)
-    }
+@use "../../app/styles/variables" as var;
 
-    .songImageWrapper {
-        position: relative;             /* relative */
-        aspect-ratio: 1 / 1;            /* aspect-square */
-        width: 100%;                    /* w-full */
-        height: 100%;                   /* h-full */
-        border-radius: 0.375rem;        /* rounded-md */
-        overflow: hidden;               /* overflow-hidden */
+.songItemWrapper {
+  position: relative; /* relative */
+  display: flex; /* flex */
+  flex-direction: column; /* flex-col */
+  align-items: center; /* items-center */
+  justify-content: center; /* justify-center */
+  border-radius: 0.375rem; /* rounded-md */
+  overflow: hidden; /* overflow-hidden */
+  column-gap: 1rem; /* gap-x-4 = 16px */
+  background-color: rgba(163, 163, 163, 0.05); /* bg-neutral-400/5 */
+  cursor: pointer; /* cursor-pointer */
+  padding: 0.75rem; /* p-3 = 12px */
+  transition: background-color 0.2s ease; /* transition */
+
+  .playButton {
+    position: absolute;
+    bottom: 6rem;
+    right: 1.25rem;
+    transition-property: all;
+    transition-duration: 150ms;
+    transition-timing-function: ease-in-out;
+    opacity: 0;
+    border-radius: 9999px;
+    display: flex;
+    align-items: center;
+    background-color: var.$purple;
+    padding: 16px;
+    border: none;
+    filter: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07))
+      drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+    transform: translateY(25%);
+    transition: all 0.2s ease;
+  }
+
+  &:hover {
+    background-color: rgba(163, 163, 163, 0.1);
+
+    .playButton {
+      transform: translateY(0) scale(1.1);
+      opacity: 1;
     }
+  }
+
+  .songImageWrapper {
+    position: relative; /* relative */
+    aspect-ratio: 1 / 1; /* aspect-square */
+    width: 100%; /* w-full */
+    height: 100%; /* h-full */
+    border-radius: 0.375rem; /* rounded-md */
+    overflow: hidden; /* overflow-hidden */
 
     .songImage {
-        object-fit: cover;
+      object-fit: cover;
     }
+  }
+
+  .songTitleWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    padding-top: 16px;
+    row-gap: 0.25rem;
+
+    .songTitle {
+      font-weight: 700;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: 100%;
+    }
+
+    .songArtist {
+      color: var.$neutral-gray;
+      font-size: 14px;
+      padding-bottom: 16px;
+      width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
 }
