--- a/components/PlayButton/PlayButton.module.scss
+++ b/components/PlayButton/PlayButton.module.scss
@@ -1,5 +1,24 @@
 @use "../../app/styles/variables" as var;
 
-.playButtonIcon {
-  color: black;
+.playButton {
+  transition-property: all;
+  transition-duration: 150ms;
+  transition-timing-function: ease-in-out;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  background-color: var.$purple;
+  padding: 16px;
+  border: none;
+  filter: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07))
+    drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+	transition: all 0.2s ease;
+
+	&:hover {
+		transform: scale(1.10);
+	}
+
+  .playButtonIcon {
+    color: black;
+  }
 }
