--- a/components/SongItem/SongItem.module.scss
+++ b/components/SongItem/SongItem.module.scss
@@ -22,14 +22,7 @@
     transition-duration: 150ms;
     transition-timing-function: ease-in-out;
     opacity: 0;
-    border-radius: 9999px;
-    display: flex;
-    align-items: center;
-    background-color: var.$purple;
-    padding: 16px;
     border: none;
-    filter: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07))
-      drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
     transform: translateY(25%);
     transition: all 0.2s ease;
   }
@@ -41,6 +34,12 @@
       transform: translateY(0) scale(1.1);
       opacity: 1;
     }
+  }
+
+  .playButton {
+    position: absolute;
+    bottom: 6rem;
+    right: 1.25rem;
   }
 
   .songImageWrapper {
