--- a/components/PlayButton/PlayButton.module.scss
+++ b/components/PlayButton/PlayButton.module.scss
@@ -10,6 +10,7 @@
   background-color: var.$purple;
   padding: 16px;
   border: none;
+  cursor: pointer;
   filter: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07))
     drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
 	transition: all 0.2s ease;
