add search page

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -2,5 +2,5 @@ $dark-purple: #a670f6;
 $purple: #A084C9;
 $black: #000000;
 $white: #FFFFFF;
-$gray: #575656;
+$gray: #2f2e2e;
 $neutral-gray: #a3a3a3;
