--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -25,6 +25,7 @@
                 justify-content: center;
                 color: var.$white;
                 padding: 0;
+                border: none;
 
                 &:hover {
                     opacity: 75%;
