--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -14,10 +14,10 @@
             margin-top: 10px;
         }
     }
-
+    
     .main {
         width: 100%;
-        margin-right: 10px;
+        margin: 10px 10px 10px 0px;
     }
 }
 
