add Search page and functionality

--- a/app/search/page.module.scss
+++ b/app/search/page.module.scss
@@ -23,6 +23,7 @@
             font-weight: 700;
             font-size: 30px;
             line-height: 36px;
+            margin-bottom: 12px;
         }
     }
 }
